--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/TestMap/TestMap_0.TestMap_0
+EditorStartupMap=/Game/Levels/TestMap/TestMap_0.TestMap_0
+GlobalDefaultGameMode=/Game/Gameplay/GameMode/BP_GameModeBase.BP_GameModeBase_C
+GameInstanceClass=/Script/GenshinElementalWar.GenshinGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -14,7 +17,7 @@ r.ReflectionMethod=1
 
 r.SkinCache.CompileShaders=True
 
-r.RayTracing=True
+r.RayTracing=False
 
 r.Shadow.Virtual.Enable=1
 
@@ -23,6 +26,13 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.Lumen.HardwareRayTracing=False
+r.CustomDepthTemporalAAJitter=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.AutoExposure.Bias=0.000000
+r.DefaultFeature.MotionBlur=False
+r.GPUCrashDebugging=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -68,13 +78,26 @@ AppliedDefaultGraphicsPerformance=Maximum
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=((Default, "/Game/UI/WBP_DefaultMouse.WBP_DefaultMouse_C"))
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+DesignScreenSize=(X=1920,Y=1080)
+bLoadWidgetsOnDedicatedServer=True
 bAuthorizeAutomaticWidgetVariableCreation=False
+CustomFontDPI=96
 FontDPIPreset=Standard
-FontDPI=72
+bUseCustomFontDPI=False
+bEnableDistanceFieldFontRasterization=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GenshinElementalWar")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GenshinElementalWar")
+GameScreenshotSaveDirectory=(Path="C:/Users/19392/Pictures/Unreal Engine Photo")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -89,4 +112,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/UnrealEd.CookerSettings]
+cook.displaymode=3
 
