启动UMG ViewModel插件 启动Common UI插件 删除自己创建的WidgetController,转而考虑使用MVVC插件扩展或者CommonUI插件扩展

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,6 +98,7 @@ bEnableDistanceFieldFontRasterization=False
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GenshinElementalWar")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GenshinElementalWar")
 GameScreenshotSaveDirectory=(Path="C:/Users/19392/Pictures/Unreal Engine Photo")
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
