--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/TestMap/TestMap_0.TestMap_0
+GameDefaultMap=/Game/Levels/MainMap/MainMap.MainMap
 EditorStartupMap=/Game/Levels/TestMap/TestMap_0.TestMap_0
-GlobalDefaultGameMode=/Game/Gameplay/GameMode/BP_GameModeBase.BP_GameModeBase_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Script/GenshinElementalWar.GenshinGameInstance
 
 [/Script/Engine.RendererSettings]
