构建GameplayTag的代码添加逻辑

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,6 +99,7 @@ bEnableDistanceFieldFontRasterization=False
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GenshinElementalWar")
 GameScreenshotSaveDirectory=(Path="C:/Users/19392/Pictures/Unreal Engine Photo")
 GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+AssetManagerClassName=/Script/GenshinElementalWar.GenshinAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
