--- a/GenshinElementalWar.uproject
+++ b/GenshinElementalWar.uproject
@@ -116,6 +116,10 @@
 		{
 			"Name": "Water",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
